--- a/forside.css
+++ b/forside.css
@@ -31,6 +31,10 @@
     margin-top: -30px;
 }
 
+.gulPunktum {
+    color: #FFDE17; /* Gul farve */
+}
+
 /* --------- intro tekst på forside ------------------- */
 .introTekst {
     margin: 50px 0 50px 10%;
